[project]
name = "stage-model-builder"
version = "0.1.0"
description = "A package to aid building stage models quickly for use in the London AI Centre"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyarrow>=19.0.1", "s3fs>=0.4.2"]

[project.scripts]
smb = "stage_model_builder:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.5", "ruff>=0.11.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
